# aoc19

./: CMakeLists.txt  log.cpp  log.h  main.cpp
day1/: data.h  day1.cpp  day1.h
day2/: data.h  day2.cpp  day2.h
